# krbrelayx

./: README.md  pyproject.toml
krbrelayx/: addspn.py  dnstool.py  krbrelayx.py
krbrelayx/lib/clients/: __init__.py  httprelayclient.py  ldaprelayclient.py  smbrelayclient.py
krbrelayx/lib/servers/: dnsrelayserver.py  httprelayserver.py  smbrelayserver.py
